codegen/c/src/snapshots/transmute_codegen_c__tests__struct_simple_instantiation.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
// Begin program code

#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

// Generated struct declarations
typedef struct s12SimpleStruct s12SimpleStruct;

// Generated struct definitions
struct s12SimpleStruct {
  int64_t field1;
  bool field2;
};

// Generated function declarations
void _TM0_F1f0(void *parent_frame);

// Generated function frames
typedef struct {
  void *parent;
  union {
    void *pointers[2];
    struct {
      s12SimpleStruct *e2;
    };
  };
} _TM0_F1f0__frame;

// Generated function declarations
void _TM0_F1f0(void *parent_frame)
{
  // prelude
  _TM0_F1f0__frame me = (_TM0_F1f0__frame){0};
  me.parent = parent_frame;

  {
    me.e2 = malloc(sizeof(s12SimpleStruct));
    me.e2->field1 = 1;
    me.e2->field2 = true;
    
    me.e2;
    return;
  }
}

// End program code
